--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 
 body {
-    background-color: #272727;
+    background-color: #ffffff;
 }
 
 h1 {
     text-align: center;
     font-size: 3em;
-    color: #deff8b;
+    color: #8bdeff;
 }
 
 ul {
